--- a/aboutthissite.css
+++ b/aboutthissite.css
@@ -1,18 +1,24 @@
-header {
-    font-size:29px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
-  
-    background-color: antiquewhite;
-    color:rgb(127, 78, 15);
-    position: fixed;
-    width: 100%;
-    height: 25%;
-    opacity: ;
 
+header {
+    
+        font-size:29px;
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
+      
+        background-color: antiquewhite;
+        color:rgb(127, 78, 15);
+        position: fixed;
+        width: 100%;
+        height: 25%;
+        opacity: ;
+    
+        
+    }
     
 }
 
-
+float-left {
+    style="width: 250px;height:200px;"
+}
 
 
 body {
@@ -21,25 +27,12 @@ body {
 
 }
 
-.text1 {
-    display: inline-block; vertical-align: top;
-}
+
 
 img {
     width: 120px;
 }
 
-.image1 {
-float: right;
-border-radius: 10px;
-height: auto;
-width: 40%;
-max-width: 100%
-
-
-
-
-}
 
 .websitelogo {
     position: fixed;
@@ -59,28 +52,22 @@ nav {
 }
 
 .searchcontainer {
-    padding-left: 550px;
+    padding-left: 500px;
     font-size: medium;
-  
 }
 
 .searchbar {
-   position: relative;
-
-  
+   padding:50;
 
 }
-
 
 .hydrangea {
     margin-top:;
-    margin-left: 20%;
-    
-
+    margin-left: 160px;
 }
 
 .searchbar h2 {
-    margin: 0px;
+    margin:0;
 }
 
 
@@ -97,14 +84,8 @@ ol {
 
 main {
 
-    padding-top: 230px;
-  
+    padding-top: 150px;
 }
-
-.list {
-    list-style;
-}
-
 
 .footer-container {
     background-color: rgb(212, 163, 113);
@@ -129,7 +110,7 @@ main {
     display: flex;
     flex-direction: column;
     margin-right: 4rem;
-    margin-top: 25rem;
+
 }
 
 .footer-heading h2 {
@@ -150,7 +131,7 @@ main {
 }
 
 .footer-email-form h2 {
-    margin-top: -20rem;
+    margin-top: rem;
     
 }
 
@@ -201,6 +182,3 @@ main {
         margin-top: 4rem;
     }
 }
-
-    
-
