--- a/celebritystyle.css
+++ b/celebritystyle.css
@@ -13,6 +13,9 @@ header {
 }
 
 
+float-left {
+    style="width: 250px;height:200px;"
+}
 
 
 body {
@@ -21,25 +24,12 @@ body {
 
 }
 
-.text1 {
-    display: inline-block; vertical-align: top;
-}
+
 
 img {
     width: 120px;
 }
 
-.image1 {
-float: right;
-border-radius: 10px;
-height: auto;
-width: 40%;
-max-width: 100%
-
-
-
-
-}
 
 .websitelogo {
     position: fixed;
@@ -79,8 +69,9 @@ nav {
 
 }
 
+
 .searchbar h2 {
-    margin: 0px;
+    margin:0;
 }
 
 
@@ -97,18 +88,11 @@ ol {
 
 main {
 
-    padding-top: 230px;
-  
+    padding-top: 150px;
 }
-
-.list {
-    list-style;
-}
-
 
 .footer-container {
     background-color: rgb(212, 163, 113);
-   
 
 
    
@@ -123,12 +107,13 @@ main {
     justify-content: center;
     flex-wrap: wrap;
     margin: 0 auto;
+    
 }
 
 .footer-heading {
     display: flex;
     flex-direction: column;
-    margin-right: 4rem;
+    margin-right: 3rem;
     margin-top: 25rem;
 }
 
@@ -150,7 +135,7 @@ main {
 }
 
 .footer-email-form h2 {
-    margin-top: -20rem;
+    margin-top: -rem;
     
 }
 
@@ -201,6 +186,3 @@ main {
         margin-top: 4rem;
     }
 }
-
-    
-
